# lama-dummy-pass

./: .envrc  CODE_OF_CONDUCT.md  Cargo.nix  Cargo.toml  Dockerfile  LICENSE.md  README.md  default.nix
.github/workflows/: docker-publish.yml  rust.yml
.vim/: coc-settings.json
src/: cli.rs  db.rs  error.rs  main.rs  store.rs
