[package]
name = "pass"
version = "0.1.0"
authors = ["Robin M <root@grenewode.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

config = "0.10.1"

directories = "2.0.2"

thiserror = "1.0"
structopt = "0.3"
rpassword = "4.0.5"
