[package]
name = "imposter-pass"
description = "a simple tool for impersonating the standard unix password manager"
homepage = "https://github.com/grenewode/imposter-pass"
repository = "https://github.com/grenewode/imposter-pass"
version = "0.3.0"
authors = ["Robin M <root@grenewode.io>"]
edition = "2018"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"


thiserror = "1.0"
structopt = "0.3"
rpassword = "4.0.5"
